--- a/FRONTEND/login.html
+++ b/FRONTEND/login.html
@@ -2,20 +2,21 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Login - ACT 4</title>
+  <title>ACT 4 - Login</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h2>Iniciar Sesión</h2>
 
-  <form id="loginForm">
-    <input type="email" id="email" placeholder="Correo" required>
-    <br><br>
-    <input type="password" id="password" placeholder="Contraseña" required>
-    <br><br>
-    <button type="submit">Entrar</button>
-  </form>
+  <div class="card">
+    <h2>Iniciar Sesión</h2>
 
-  <p id="msg"></p>
+    <input type="email" id="email" placeholder="Correo">
+    <input type="password" id="password" placeholder="Contraseña">
+
+    <button onclick="login()">Entrar</button>
+
+    <p id="msg" class="msg"></p>
+  </div>
 
   <script src="login.js"></script>
 </body>
